--- a/MoonRunner/Base.lproj/Main.storyboard
+++ b/MoonRunner/Base.lproj/Main.storyboard
@@ -219,13 +219,13 @@
                                         <rect key="frame" x="0.0" y="179" width="343" height="52"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Silver" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rxh-Qh-8uI">
-                                                <rect key="frame" x="0.0" y="0.0" width="292" height="52"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="291.5" height="52"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spaceship-silver" translatesAutoresizingMaskIntoConstraints="NO" id="O8m-af-Pf0">
-                                                <rect key="frame" x="292" y="0.0" width="51" height="52"/>
+                                                <rect key="frame" x="291.5" y="0.0" width="51.5" height="52"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="O8m-af-Pf0" secondAttribute="height" multiplier="1:1" id="vUT-e6-7H1"/>
                                                 </constraints>
@@ -460,6 +460,16 @@
                                     <outlet property="delegate" destination="edy-es-7gn" id="E4d-hY-1bS"/>
                                 </connections>
                             </mapView>
+                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="96D-kw-JCR">
+                                <rect key="frame" x="0.0" y="64" width="375" height="334"/>
+                            </imageView>
+                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VzI-Ub-typ">
+                                <rect key="frame" x="307" y="331" width="60" height="59"/>
+                                <state key="normal" image="info"/>
+                                <connections>
+                                    <action selector="infoButtonTapped" destination="edy-es-7gn" eventType="touchUpInside" id="PAi-4B-ZGE"/>
+                                </connections>
+                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="eQq-kW-TKO">
                                 <rect key="frame" x="16" y="406" width="343" height="156"/>
                                 <subviews>
@@ -502,19 +512,44 @@
                                     <constraint firstItem="7Cn-sX-uPM" firstAttribute="width" secondItem="eQq-kW-TKO" secondAttribute="width" id="c9o-Xu-tLe"/>
                                 </constraints>
                             </stackView>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tke-4v-iaM">
+                                <rect key="frame" x="310" y="628" width="51" height="31"/>
+                                <connections>
+                                    <action selector="displayModeToggled:" destination="edy-es-7gn" eventType="valueChanged" id="T5b-JW-0NV"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SPACE MODE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z88-4w-x5i">
+                                <rect key="frame" x="196.5" y="633.5" width="105.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="eQq-kW-TKO" firstAttribute="leading" secondItem="02b-8x-I0v" secondAttribute="leadingMargin" id="57q-Fr-gcB"/>
+                            <constraint firstItem="VzI-Ub-typ" firstAttribute="trailing" secondItem="96D-kw-JCR" secondAttribute="trailing" constant="-8" id="Awg-Vb-1UN"/>
+                            <constraint firstItem="DiD-yF-DJb" firstAttribute="top" secondItem="tke-4v-iaM" secondAttribute="bottom" constant="8" id="GPh-za-Zvl"/>
+                            <constraint firstItem="96D-kw-JCR" firstAttribute="bottom" secondItem="jNH-dz-PwR" secondAttribute="bottom" id="Jf4-nl-xKY"/>
                             <constraint firstAttribute="trailing" secondItem="jNH-dz-PwR" secondAttribute="trailing" id="LhV-yf-wh4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eQq-kW-TKO" secondAttribute="trailing" id="MgU-zy-WpV"/>
+                            <constraint firstItem="96D-kw-JCR" firstAttribute="top" secondItem="jNH-dz-PwR" secondAttribute="top" id="PgD-Li-v9l"/>
                             <constraint firstItem="eQq-kW-TKO" firstAttribute="top" secondItem="jNH-dz-PwR" secondAttribute="bottom" constant="8" symbolic="YES" id="Rua-Nd-XA1"/>
+                            <constraint firstItem="96D-kw-JCR" firstAttribute="leading" secondItem="jNH-dz-PwR" secondAttribute="leading" id="Skm-2P-QLv"/>
+                            <constraint firstItem="tke-4v-iaM" firstAttribute="leading" secondItem="z88-4w-x5i" secondAttribute="trailing" constant="8" id="VPM-tb-u52"/>
+                            <constraint firstItem="VzI-Ub-typ" firstAttribute="bottom" secondItem="96D-kw-JCR" secondAttribute="bottom" constant="-8" id="XlB-6f-ZpN"/>
+                            <constraint firstItem="96D-kw-JCR" firstAttribute="trailing" secondItem="jNH-dz-PwR" secondAttribute="trailing" id="a7o-Wn-ZEO"/>
                             <constraint firstItem="jNH-dz-PwR" firstAttribute="leading" secondItem="02b-8x-I0v" secondAttribute="leading" id="jpg-eN-Nku"/>
+                            <constraint firstItem="tke-4v-iaM" firstAttribute="trailing" secondItem="02b-8x-I0v" secondAttribute="trailingMargin" id="lee-0J-bT4"/>
                             <constraint firstItem="jNH-dz-PwR" firstAttribute="top" secondItem="8HS-KC-Bpd" secondAttribute="bottom" id="ops-fp-is0"/>
+                            <constraint firstItem="tke-4v-iaM" firstAttribute="top" relation="greaterThanOrEqual" secondItem="eQq-kW-TKO" secondAttribute="bottom" constant="8" symbolic="YES" id="qPR-0N-LT5"/>
                             <constraint firstItem="jNH-dz-PwR" firstAttribute="height" secondItem="02b-8x-I0v" secondAttribute="height" multiplier="0.5" id="sXb-2W-F6h"/>
+                            <constraint firstItem="z88-4w-x5i" firstAttribute="centerY" secondItem="tke-4v-iaM" secondAttribute="centerY" id="xqs-7f-WbG"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="badgeImageView" destination="96D-kw-JCR" id="vlt-hY-lS7"/>
+                        <outlet property="badgeInfoButton" destination="VzI-Ub-typ" id="4dO-Pq-5K5"/>
                         <outlet property="dateLabel" destination="sAJ-v7-yGx" id="aTy-VQ-igK"/>
                         <outlet property="distanceLabel" destination="f8d-ls-rzA" id="tZJ-GU-F3O"/>
                         <outlet property="mapView" destination="jNH-dz-PwR" id="tCV-22-IMQ"/>
